More objectives/methodologies.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -67,6 +67,48 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 %=========================================================================================================
 
+\section{Objectives and Methodology}
+
+The design and development of a new category of alternate reality requires thorough theoretical comprehension and understanding of existing categories of alternate realities. However to ascertain the worth of a new alternate reality it is all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base an assessment upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios upon existing categories of alternate reality, an involved assessment of a new alternate reality requires that it be deployed and not remain contained to thought experiment or theoretical postulation.
+
+\begin{quote}
+	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
+\end{quote}
+
+%Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
+
+The approach taken by this body of research was first to develop a well defined set of definitions for different categories of existing alternate reality, in order to correctly situate the new paradigm of parallel reality against them and to inform its implementation from the findings and adopted best practices produced by bodies of research into them. This process involved updates to several previously established models and the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the parallel reality paradigm and is covered by chapter \ref{chapter-background}.
+
+The \textit{worth} of the parallel reality paradigm, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection of empirical evidence.
+
+Initially the Virtual Time Window platform was developed in order to explore the potential suitability of an existing alternate reality modality of interaction to serve as a platform for investigation into parallel reality experience and is discussed in chapter \ref{chapter-vtw}. After the experiential aspect of the Virtual Time Window did not fully meet with the vision of the parallel reality concept, the Mirrorshades platform was developed in order to fully realise the ideals of the paradigm via a new modality of alternate reality interaction and is covered by chapter \ref{chapter-mirrorshades}.
+
+%needs to mention that seated VR is a style of interaction that would be used in the scenario
+%and that parallel reality allows exploration of the same content, for the same goal, but in a different manner
+The measure of success for the Mirrorshades platform as an instantiation of the parallel reality concept was based upon a comparison to a previously explored category of alternate reality, by comparing Mirrorshades against a seated virtual reality experience within a virtual heritage scenario. This evaluation is covered by chapter \ref{chapter-eval-1}.
+
+With success of the platform strongly indicated by this first user study, two further user studies were undertaken in order to shed light upon how different aspects of the implementation of a parallel reality platform either negatively or positively affected the user experience. These studies allowed for the construction of a set of best practice recommendations for future parallel reality endeavours and are covered by chapter \ref{chapter-eval-2}.
+
+%=====================
+
+In summary the fundamental research objectives addressed by this thesis were to:
+
+\begin{enumerate}
+	\item Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, performing updates, modifications and extensions where required.
+	
+	\item Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different implementations of a parallel reality experience.
+	
+	\item Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous categories of alternate reality that may be employed in the same scenario.
+	
+	%scenario isn't really the word we want - task?
+	\item Identify and put into practice suitable assessment techniques to ascertain the worth of parallel reality in relation to previous alternate reality experience in the same scenario.
+	
+	\item Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects and put these into practice within real world user studies.
+	
+\end{enumerate}
+
+%=========================================================================================================
+
 \section{Contributions}
 \label{intro-contributions}
 The contributions of this thesis can be summarized as follows:
@@ -80,64 +122,6 @@ The contributions of this thesis can be summarized as follows:
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
 	\item Creation and discussion of a set of best practices for future parallel reality endeavours.
 \end{itemize}
-
-%=========================================================================================================
-
-\section{Objectives and Methodology}
-
-The design and development of a new category of alternate reality naturally requires a thorough comprehension and understanding of existing theoretical frameworks. However to ascertain the worth of a new alternate reality it is all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} the experience in order for there to be something to base an assessment upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios in related contexts, assessment of a new alternate reality requires that it be deployed and not remain a thought experiment or theoretical framework.
-
-\begin{quote}
-	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
-\end{quote}
-
-
-
-Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''}
-
-
-
-\ref{chapter-background}
-The approach to this investigation involved first developing a well defined set of definitions for different alternate realities, in order to correctly situate the new paradigm of parallel reality against them and to inform its implementation from the findings and advice of other previously established alternate reality paradigms and their real world investigations.
-
-
-
-
-The worth of the parallel reality paradigm however, cannot truly be assessed through purely theoretical means. While one can postulate as to the experiential aspects of such a system and how they will affect particular tasks and scenarios, it is only through actual creation and application that such postulations can be corroborated or refuted.
-
-Thus after the creation of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop actual parallel reality systems which could then be applied to real world user studies to allow collection of empirical evidence in the real world.
-
-
-\ref{chapter-vtw} \ref{chapter-mirrorshades}
-First the Virtual Time Window platform explored the potential suitability of an existing alternate reality modality to serve as a platform for the investigation of parallel reality experience and subsequently the Mirrorshades platform was developed as an entirely new modality to better realise the envisaged experience of parallel reality.
-
-
-\ref{chapter-eval-1}
-The measure of success for this platform was based upon a comparison to previously explored alternate reality experiences in similar settings, by application to a use case within the field of virtual heritage, comparing a seated virtual reality experience of virtual reconstructions of heritage content against the same content experienced as part of a parallel reality.
-
-\ref{chapter-eval-2}
-With the success of the platform strongly indicated by these user studies, further study was undertaken to shed light onto how different aspects of the implementation of a parallel reality experience either negatively or positively affected the user experience, allowing for the construction of a set of best practice recommendations for future parallel reality endeavours.
-
-
-
-requiring the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the system, as it is different to anything that came before
-
-
-
-The fundamental research objectives addressed by this thesis are thus:
-
-\begin{enumerate}
-	\item Introduce the parallel reality concept by situating it within the larger ecosystem of alternate realities, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, updating those where required.
-	
-	\item Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different parallel reality implementations.
-	
-	\item Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous alternate reality experiences.
-	
-	\item Identify and effect suitable assessment approaches to ascertain the worth of parallel reality in comparison to previous alternate reality experience.
-	
-	\item Identify aspects of a parallel reality system that are expected to positively or negatively effect the user experience, along with assessment methodologies to ascertain such effects and apply these to real world user studies.
-	
-\end{enumerate}
 
 %=========================================================================================================
 
