Eye relief, hyperfocal into Mirrorshades discussion.

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -134,9 +134,10 @@ The Oculus Rift DK1 covers the user's entire field of view, such that they canno
 	\item Sensor aspect ratio that matches that of each half of the DK1's display.
 	\item Lens focal length and sensor dimensions that provide wide FOV (ideally matching the FOV of the DK1).
 	\item Ease of integration with the Unity platform.
+	\item Price realistic of virtual heritage deployments.
 \end{itemize}
 
-The PS3 Eye camera met most of these requirements. While its resolution of 640x480 pixels does not meet each half of the DK1's display at 640x800 pixels, unusually for a USB camera it is capable of running at 60fps - the refresh rate of the DK1. The aspect ratio of the 640x480 sensor is 4:3, which although not identical to the 5:4 aspect ratio of each eye's 640x800 half of the DK1 screen, is closer than the 16:10 or 16:9 aspect ratio of a `widescreen' camera sensor. Furthermore once dismantled to its bare PCB it features mounting holes for a standard S-mount (M12x0.5mm) lens mount commonly used for CCTV cameras, allowing alternative focal length lenses to be easily fitted.
+The \$300 price tag of the DK1 and the low price of consumer webcams for computer and console use met with the budgetary requirement of the video see-through solution. The PS3 Eye camera met most of the technical requirements and has a history of use in research scenarios as part of the PS Move motion sensing platform (see section \ref{psmove}). While its resolution of 640x480 pixels does not meet each half of the DK1's display at 640x800 pixels, unusually for a USB camera it is capable of running at 60fps - the refresh rate of the DK1. The aspect ratio of the 640x480 sensor is 4:3, which although not identical to the 5:4 aspect ratio of each eye's 640x800 half of the DK1 screen, is closer than the 16:10 or 16:9 aspect ratio of a `widescreen' camera sensor. Furthermore once dismantled to its bare PCB it features mounting holes for a standard S-mount (M12x0.5mm) lens mount commonly used for CCTV cameras, allowing alternative focal length lenses to be easily fitted.
 
 An early test with the PS3 Eye and the DK1 (a video of this test is available to view online\footnote{\url{https://www.youtube.com/watch?v=tS0FGZxQzCU}}) was performed by simply attaching a single unmodified PS3 Eye camera to the top of the DK1 (figure \ref{rift-pseye-ziptied.jpg}) with its stock lens set to its `wide' setting (75\textdegree, presumably diagonal, FOV\footnote{\url{http://uk.playstation.com/media/247868/7010571 PS3 Eye Web_GB.pdf}}). This test explored the suitability of Unity's \texttt{WebCamTexture}\footnote{\url{http://docs.unity3d.com/ScriptReference/WebCamTexture.html}} feature for integrating the stream from a USB camera into a 3D application. For this test the mediated RW video stream was rendered to a small `floating' window that moved with the user's head (figure \ref{floating-webcam-window.png}) allowing the user to view both environments in tandem in a manner similar to VTW but in reverse - the virtual environment filling most of their viewport and the real environment as a smaller window in their periphery. Subsequently the camera streams were changed so as to render to the full expanse of the DK1's display, to better realise the switching experiential vision of parallel reality
 
@@ -168,7 +169,7 @@ The PS3 Eye camera has a `1/4'' type' sensor but this classification is only an 
 \end{center}
 \end{table}
 
-However using a lens with a focal length short enough to provide a FOV as wide as the Rift isn't strictly necessary, as when wearing the Rift the edges of the image presented to each eye are not always visible to the user, especially if the Rift's adjustable distance from the eyes is adjusted such that it sits at its furthest position. Such an adjustment is actually prudent for a user study, as using the Rift at its maximum extension from the eyes ensures maximum compatibility and comfort with users and also removes a variable between users that would be introduced if each user were permitted to chose the extension themselves. Thus the choice of lens can be dictated by identifying the FOV required to fill the portion of the Rift's images that are visible when the headset is extended to its maximal position, rather than by matching the Rift's overall FOV. This allows the use of lenses with focal length long enough that the distortion they introduce is not so bad as to require a separate correction phase in software rendering.
+However using a lens with a focal length short enough to provide a FOV as wide as the Rift isn't strictly necessary, as when wearing the Rift the edges of the image presented to each eye are not always visible to the user, especially if the Rift's adjustable eye relief is set such that it sits at its furthest position. Such an adjustment is actually prudent for a user study, as using the Rift at its maximum eye relief ensures the best compatibility and comfort with users and also removes a variable between users that would be introduced if each user were permitted to chose the extension themselves. Thus the choice of lens can be dictated by identifying the FOV required to fill the portion of the Rift's images that are visible when the eye relief is set to its maximal position, rather than by matching the Rift's overall FOV. This allows the use of lenses with focal length long enough that the distortion they introduce is not so bad as to require a separate correction phase in software rendering.
 
 Experiments revealed that with the DK1 set to its maximum extension, the area of the images visible to the user was wider than that provided by 2.5mm lenses (84\textdegree\ diagonal) when scaled correctly and narrower than that provided by 2.1mm lenses (93.9\textdegree\ diagonal) when scaled correctly. With no availability of lenses with a focal length between 2.5mm and 2.1mm, the 2.1mm focal length was adopted. Figure \ref{lens-comparison-on-ps3eye-pcb.jpg} shows the 2.5mm lens (right) and 2.1mm lens (left) mounted to the PS3 Eye PCBs via S-mount lens mounts, while figure \ref{fov-comparison-1.png} shows the FOV of the selected 2.1mm lenses scaled correctly upon the wider FOV of the DK1's images showing a scene within St Salvator's chapel.
 
@@ -368,7 +369,7 @@ In the case of Mirrorshades the fixed reference point is the chapel - both the R
 
 Whilst the FOV of the image produced by the C310 is sufficient to fill the area of the DK1's screen visible when extended to its furthest position, there are other aspects of the camera solution in addition to the latency that are worth considering, including the depth of field (DoF) of the images and their fixed convergence.
 
-Due to the fact that depth of field of an image captured by a camera increases both as lens focal length and sensor size decrease, combining a short focal length lens (such as the 2.1mm used in the DK1 solution) with a small sensor (such as the 1/4'' type used in the DK1 solution) results in a sufficient depth of field when looking through the DK1 with C310 so as not to feel different in this respect to viewing in the same lighting conditions with bare eyes.
+Due to the fact that depth of field of an image captured by a camera system increases both as lens focal length and sensor size decrease, the combination of a short focal length lens (such as the 2.1mm used in the DK1 solution) with a small sensor (such as the 1/4'' type used in the DK1 solution) results in a very large depth of field. The hyperfocal distance~\cite{Kingslake1992} of the DK1 solution is close enough to the user that the images have acceptable sharpness from roughly arm's length to infinity. It is only upon looking at something closer than this, such as paying close attention to a handheld controller, that the image loses acceptable sharpness.
 
 With regards to convergence, when viewing an object in the real world the eyes rotate such that the perpendicular axes that bisect each eye converge at the point that one is looking at. This results in disparity between the images produced by each eye, as each sees the object from a different angle due to the physical distance between the eyes. This disparity leads to stereopsis, which is one of the contributing factors that leads to our ability to perceive depth. Oculus exploit this situation with their HMDs, by presenting a slightly different image to each eye, allowing virtual objects to appear at varying distances behind or in front of the virtual display.
 
@@ -438,7 +439,7 @@ Robustness of all aspects of a virtual heritage system is critical for enjoyment
 %=========================================================================================================
 
 \subsection{PlayStation Move}
-
+\label{psmove}
 One technology investigated for suitability as an IPS for use with Mirrorshades was PlayStation Move (PSMove), a game controller platform released by Sony for use with their PlayStation 3 console. The PSMove tracks a hand held controller which contains inertial sensors and has a plastic sphere on its end that is illuminated from within by a RGB LED, using the bundled PS3 Eye camera to track the controller's position in relation to itself. Through use of the PSMove API~\cite{Perl2012} the PSMove platform can be used by a regular computer, making use of the OpenCV\footnote{\url{http://opencv.org/}} computer vision project.
 
 Whilst PSMove has been used successfully for pedestrian position tracking in previous projects, including one that used an Oculus Rift HMD\footnote{\url{http://projects.ict.usc.edu/mxr/blog/project-holodeck-wows-in-dublin/}}, it soon became apparent when auditioning the platform that it only performs reliably in dimly lit conditions. Even the relatively dim scene shown by figure \ref{psmove-screenshot.png} represented too much ambient light for reliable tracking, so the suitability of the platform for use at a cultural heritage site where illumination is unlikely to be easily controllable was negated.
