--- a/bib.bib
+++ b/bib.bib
@@ -85,6 +85,15 @@ url = {http://www.research.ibm.com/people/k/koved/papers/rc16446.html},
 volume = {1},
 year = {1992}
 }
+@article{Applin2012,
+abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
+author = {Applin, Sally A},
+journal = {Policy},
+number = {February},
+title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
+url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
+year = {2012}
+}
 @article{Applin2011,
 abstract = {Contribute to the workshop with our understanding of humans, culture and group behavior and to learn from others what type of group behavior is expected as new technologies and their subsequent experiences are created for human use. When we discuss human group behavior, we refer to the definition of a social group: a collection of humans who repeatedly interact within a system. Humans can, and do switch context between environments and blend traces of one into the other in a socially unconscious manner often seemingly simultaneously. We propose that the cultures and behaviors of humans are increasingly actively permeating Internet and network- based applications, as well as those that are geolocal. With the future Internet of things, Dual Reality and Mixed Reality, the opportunity for humans to extend their own blended reality, as well as to create new ones is unfolding. That said, because humans interact within groups, the multiplexing of their mutual blended realities rapidly creates a PoSR. Sorting out the relationships between realities as well as between synchronous and asynchronous time and geolocal space can create a condition where realities are simultaneous and the idea of 'x' can be perceived as equaling 'not x.' We explore this new type of interoperability between virtual and physical, ideational and material, representations and objects and culture.},
 author = {Applin, Sally A},
@@ -94,15 +103,6 @@ pages = {11--14},
 title = {{A Cultural Perspective on Mixed , Dual and Blended Reality}},
 url = {http://www.anthropunk.com/xwiki/wiki/anthropunk/download/Main/WebHome/ACulturalPerspectiveApplinFischer.pdf},
 year = {2011}
-}
-@article{Applin2012,
-abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
-author = {Applin, Sally A},
-journal = {Policy},
-number = {February},
-title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
-url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
-year = {2012}
 }
 @article{Applin2011a,
 abstract = {We consider some possible broad changes that may impact society as a whole as a result of widespread integration of full-spectrum deployed pervasive computing technologies. Our approach considers design challenges for successfully developing and integrating pervasive technologies into culture and society. This is particularly challenging, since pervasive technologies as services are most successful when transparent, invisible, overlooked, unacknowledged and seemingly forgotten by the very groups that embrace their usage and development. We suggest a heuristic for understanding pervasive technology from an anthropological/social perspective, along with a reminder that humans create, shape and use the technologies that affect them. In particular, we look at the impact on social relations in a poly-social world where people must develop means to blend their own realities with those of of others. In conclusion, we remind those developing these technologies, that although we will eventually become wedded and intertwined as cyborgs within this new environment, it may have a positive outcome, creating new social group models for human interaction.},
@@ -1942,6 +1942,13 @@ title = {{From the Fire Pit}},
 volume = {3},
 year = {2008}
 }
+@book{Kingslake1992,
+author = {Kingslake, Rudolf},
+isbn = {0819407631},
+publisher = {SPIE Publications},
+title = {{Optics in Photography}},
+year = {1992}
+}
 @article{Klatzky1998,
 abstract = {Two studies investigated updating of self-position and heading during real, imagined, and simulated locomotion. Subjects were exposed to a two-segment path with a turn between segments; they responded by turning to face the origin as they would if they had walked the path and were at the end of the second segment. The conditions of pathway exposure included physical walking, imagined walking from a verbal description, watching another person walk, and experiencing optic flow that simulated walking, with or without a physical turn between the path segments. If subjects failed to update an internal representation of heading, but did encode the pathway trajectory, they should have overturned by the magnitude of the turn between the path segments. Such systematic overturning was found in the description and watching conditions, but not with physical walking. Simulated optic flow was not by itself sufficient to induce spatial updating that supported correct turn responses.},
 author = {Klatzky, Roberta L and Loomis, Jack M and Beall, Andrew C and Chance, Sarah S and Golledge, Reginald G},
@@ -2827,6 +2834,12 @@ url = {https://journals.tdl.org/jvwr/article/view/660/536},
 volume = {2},
 year = {2009}
 }
+@misc{OpenGeospatialConsortium,
+annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
+author = {{Open Geospatial Consortium}, Inc.},
+title = {{OWS-4 Demonstration}},
+url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
+}
 @misc{OpenGeospatialConsortiuma,
 annote = {        From Duplicate 1 (                           Welcome to the GSN Project                         - Open Geospatial Consortium, Inc. )
                 
@@ -2837,12 +2850,6 @@ author = {{Open Geospatial Consortium}, Inc.},
 howpublished = {$\backslash$url\{http://sourceforge.net/apps/trac/gsn/\}},
 title = {{Welcome to the GSN Project}},
 url = {http://sourceforge.net/apps/trac/gsn/}
-}
-@misc{OpenGeospatialConsortium,
-annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
-author = {{Open Geospatial Consortium}, Inc.},
-title = {{OWS-4 Demonstration}},
-url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
 }
 @misc{OpenVirtualWorldsgroupSchoolofComputerScience,
 author = {{Open Virtual Worlds group, School of Computer Science}, University of St Ancrews},
@@ -3877,16 +3884,6 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
-@incollection{Turkle2004,
-author = {Turkle, Sherry},
-booktitle = {Community in the Digital Age: Philosophy and Practice},
-chapter = {6},
-editor = {Feenberg, Andrew and Barney, Darin},
-pages = {101--117},
-publisher = {Rowman \& Littlefield},
-title = {{Our Split Screens}},
-year = {2004}
-}
 @book{Turkle2011,
 author = {Turkle, Sherry},
 pages = {384},
@@ -3902,6 +3899,16 @@ pages = {354},
 publisher = {Simon \& Schuster},
 title = {{Life on the Screen}},
 year = {1997}
+}
+@incollection{Turkle2004,
+author = {Turkle, Sherry},
+booktitle = {Community in the Digital Age: Philosophy and Practice},
+chapter = {6},
+editor = {Feenberg, Andrew and Barney, Darin},
+pages = {101--117},
+publisher = {Rowman \& Littlefield},
+title = {{Our Split Screens}},
+year = {2004}
 }
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
